# kitsu_publisher

./: .gitignore  LICENSE  README.md  REQUIREMENTS.md  pyproject.toml
backend/: config.py  dependencies.py  desktop.py  generate_icons.py  icon.icns  kitsu_api_snippet.py  main.py  schemas.py  updater.py  version.py
backend/routers/: auth.py  files.py  kitsu.py  publish.py  system.py
backend/services/: parser.py
frontend/: package.json  svelte.config.js  vite.config.ts
frontend/src/: app.d.ts
frontend/src/lib/: store.ts
frontend/src/lib/components/: AboutModal.svelte
frontend/src/routes/: +page.svelte
frontend/src/routes/publish/: +page.svelte
frontend/src/routes/settings/: +page.svelte
